# hpcgmp

./: AUTHORS  BUGS  CMakeLists.txt  COPYRIGHT  ChangeLog  HISTORY  INSTALL  Makefile  Makefile.ext  QUICKSTART  README  README.md  TODO  TUNING  configure
setup/: Make.Frontier  Make.GCC_OMP  Make.ICPC_OMP  Make.Linux_MPI  Make.Linux_Serial  Make.MPIICPC_OMP  Make.MPI_CRAY_Crusher  Make.MPI_CRAY_Serial  Make.MPI_GCC_CUDA  Make.MPI_GCC_OMP  Make.MPI_HIP_Serial  Make.MPI_ICPC  Make.MPI_ICPC_OMP  Make.Mac_MPI  Make.Mac_Serial  Make.Mac_Serial_debug  Make.UNKNOWN
src/: BenchGMRES.cpp  BenchGMRES.hpp  CheckAspectRatio.cpp  CheckAspectRatio.hpp  CheckProblem.cpp  CheckProblem.hpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeDotProduct_blas.cpp  ComputeDotProduct_gpu.cpp  ComputeDotProduct_ref.cpp  ComputeDotProduct_ref.hpp  ComputeGEMMT.cpp  ComputeGEMMT.hpp  ComputeGEMMT_gpu.cpp  ComputeGEMMT_ref.cpp  ComputeGEMMT_ref.hpp  ComputeGEMV.cpp  ComputeGEMV.hpp  ComputeGEMVT.cpp  ComputeGEMVT.hpp  ComputeGEMVT_blas.cpp  ComputeGEMVT_gpu.cpp  ComputeGEMVT_ref.cpp  ComputeGEMVT_ref.hpp  ComputeGEMV_blas.cpp  ComputeGEMV_gpu.cpp  ComputeGEMV_ref.cpp  ComputeGEMV_ref.hpp  ComputeGS_Forward.cpp  ComputeGS_Forward.hpp  ComputeGS_Forward_gpu.cpp  ComputeGS_Forward_kk.cpp  ComputeGS_Forward_ref.cpp  ComputeGS_Forward_ref.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_ref.cpp  ComputeMG_ref.hpp  ComputeOptimalShapeXYZ.cpp  (+92 more)
